--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.etsisi.appquitectura.presentation.ui.main.model.ItemHome" />
+            type="com.etsisi.appquitectura.presentation.ui.main.home.model.ItemHome" />
 
         <variable
             name="listener"
