--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -16,7 +16,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.etsisi.appquitectura.presentation.ui.main.view.HomeFragment"
+        android:name="com.etsisi.appquitectura.presentation.ui.main.home.view.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home">
         <action
@@ -36,12 +36,12 @@
             <argument
                 android:name="gameMode"
                 android:defaultValue="UNKNOWN"
-                app:argType="com.etsisi.appquitectura.presentation.ui.main.model.ItemGameModeAction" />
+                app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
         </action>
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.etsisi.appquitectura.presentation.ui.main.view.SettingsFragment"
+        android:name="com.etsisi.appquitectura.presentation.ui.main.settings.view.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings"></fragment>
     <activity
@@ -51,7 +51,7 @@
         tools:layout="@layout/activity_login"></activity>
     <fragment
         android:id="@+id/playFragment"
-        android:name="com.etsisi.appquitectura.presentation.ui.main.view.PlayFragment"
+        android:name="com.etsisi.appquitectura.presentation.ui.main.game.view.PlayFragment"
         android:label="PlayFragment"
         tools:layout="@layout/fragment_play">
         <argument
@@ -74,6 +74,6 @@
         </action>
         <argument
             android:name="gameMode"
-            app:argType="com.etsisi.appquitectura.presentation.ui.main.model.ItemGameModeAction" />
+            app:argType="com.etsisi.appquitectura.presentation.ui.main.game.model.ItemGameModeAction" />
     </fragment>
 </navigation>
