--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="listener"
             type="com.etsisi.appquitectura.presentation.common.OnItemClicked" />
+
         <variable
             name="answerBO"
             type="com.etsisi.appquitectura.domain.model.AnswerBO" />
@@ -15,9 +17,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_home_item_profile"
         android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_44"
         android:clickable="true"
-        android:onClick="@{() -> listener.onItemClicked(answerBO)}"
-        android:layout_height="@dimen/dimen_44">
+        android:onClick="@{() -> listener.onItemClicked(answerBO)}">
 
         <ImageView
             android:id="@+id/txtItemIcon"
@@ -28,8 +30,8 @@
             app:layout_constraintEnd_toStartOf="@id/txtItemHomeProfile"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/ic_settings"
-            app:tint="@color/text_color_primary" />
+            app:tint="@color/text_color_primary"
+            tools:src="@drawable/ic_settings" />
 
         <TextView
             android:id="@+id/txtItemHomeProfile"
