--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -32,7 +32,9 @@
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
             app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right">
+            app:popExitAnim="@anim/exit_to_right"
+            app:popUpTo="@id/homeFragment"
+            app:restoreState="false">
             <argument
                 android:name="gameMode"
                 android:defaultValue="UNKNOWN"
@@ -84,13 +86,13 @@
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
             app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right"/>
+            app:popExitAnim="@anim/exit_to_right" />
     </fragment>
     <dialog
         android:id="@+id/navigationDialog"
         android:name="com.etsisi.appquitectura.presentation.dialog.view.NavigationDialog"
         android:label="NavigationDialog"
-        tools:layout="@layout/dialog_navigation"/>
+        tools:layout="@layout/dialog_navigation" />
     <fragment
         android:id="@+id/resultFragment"
         android:name="com.etsisi.appquitectura.presentation.ui.main.game.view.ResultFragment"
