--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -83,6 +83,8 @@
         <action
             android:id="@+id/action_playFragment_to_resultFragment"
             app:destination="@id/resultFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToSaveState="false"
             app:enterAnim="@anim/enter_from_right"
             app:exitAnim="@anim/exit_to_left"
             app:popEnterAnim="@anim/enter_from_left"
