--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -19,6 +19,16 @@
             app:lottie_loop="false"
             app:lottie_rawRes="@raw/lottie_congrats" />
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_20"
+            android:text="@string/results_title"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
             android:id="@+id/rouletteContainer"
             android:layout_width="wrap_content"
@@ -41,9 +51,10 @@
                 android:id="@+id/spinBtn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_40"
-                android:textColor="@color/text_color_primary"
                 android:background="@drawable/shape_submit_button"
-                android:text="@string/rotate_roulette" />
+                android:backgroundTint="@null"
+                android:text="@string/rotate_roulette"
+                android:textColor="@color/text_color_primary" />
 
         </LinearLayout>
 
