--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,7 +28,7 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/home_lottie"
-            android:layout_width="@dimen/dimen_100"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/rv_menu"
             app:layout_constraintDimensionRatio="W, 1:1"
