--- a/app/src/main/res/drawable/shape_rectangle.xml
+++ b/app/src/main/res/drawable/shape_rectangle.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/black_dialog_background" />
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@color/white"/>
 </shape>
