--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -21,13 +21,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_home_item_profile"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_44"
-        android:layout_marginHorizontal="@dimen/dimen_10"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_5"
         android:layout_marginVertical="@dimen/dimen_10"
-        android:background="@drawable/shape_answer"
         android:animateLayoutChanges="true"
-        android:stateListAnimator="@xml/button_pressed"
+        android:background="@drawable/answer_background"
         android:clickable="true"
+        android:elevation="@dimen/dimen_2"
+        android:minHeight="@dimen/dimen_54"
+        android:stateListAnimator="@xml/button_pressed"
         app:answerItem="@{answerBO}"
         app:answersListener="@{listener}"
         app:questionItem="@{questionBO}">
@@ -37,8 +39,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_16"
+            android:fontFamily="@font/angkor"
             android:text="@{answerBO.title}"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:lineHeight="@dimen/text_18"
