--- a/app/src/main/res/layout/item_game_mode.xml
+++ b/app/src/main/res/layout/item_game_mode.xml
@@ -36,6 +36,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_20"
                 android:textAlignment="center"
                 app:textRes="@{gameMode.title}"
+                android:fontFamily="@font/angkor"
                 app:layout_constraintBottom_toBottomOf="@+id/lottie"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/lottie"
