--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -18,11 +18,11 @@
             android:id="@+id/questionTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            style="@style/gameTitleStyle"
             android:layout_marginHorizontal="@dimen/dimen_10"
-            android:layout_marginVertical="@dimen/dimen_32"
-            android:fontFamily="@font/alfa"
+            android:layout_marginBottom="@dimen/dimen_32"
+            android:gravity="start"
             android:text="@{question.title}"
-            android:textSize="@dimen/text_22"
             app:layout_constraintEnd_toStartOf="@id/progress_bar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
