--- a/app/src/main/res/layout/item_answer.xml
+++ b/app/src/main/res/layout/item_answer.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimen_5"
-        android:layout_marginVertical="@dimen/dimen_10"
+        android:layout_marginTop="@dimen/dimen_5"
         android:animateLayoutChanges="true"
         android:background="@drawable/answer_background"
         android:clickable="true"
@@ -39,8 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_16"
-            android:fontFamily="@font/angkor"
             android:text="@{answerBO.title}"
+            android:fontFamily="@font/oxygen_bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
