--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:LuckyWheel="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -22,6 +23,7 @@
             app:lottie_rawRes="@raw/lottie_congrats" />
 
         <TextView
+            android:id="@+id/title"
             style="@style/gameTitleStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -34,6 +36,7 @@
             android:id="@+id/rouletteContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clipChildren="false"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -50,12 +53,13 @@
 
             <Button
                 android:id="@+id/spinBtn"
+                style="@style/gameBodyStyle"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_40"
                 android:background="@drawable/shape_submit_button"
                 android:backgroundTint="@null"
-                android:text="@string/rotate_roulette"
-                android:textColor="@color/text_color_primary" />
+                android:stateListAnimator="@xml/button_pressed"
+                android:text="@string/rotate_roulette" />
 
         </LinearLayout>
 
@@ -70,26 +74,32 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintVertical_bias="0.2">
 
             <LinearLayout
                 android:id="@+id/correctQuestionsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dimen_5"
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/alfa"
                     android:text="@string/results_correct_questions"
                     android:textSize="@dimen/text_20" />
 
                 <TextView
                     android:id="@+id/correctQuestions"
+                    style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
 
@@ -100,17 +110,21 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:fontFamily="@font/alfa"
                     android:text="@string/results_time_average"
                     android:textSize="@dimen/text_20" />
 
                 <TextView
                     android:id="@+id/answersAverage"
+                    style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
         </LinearLayout>
