--- a/app/src/main/res/layout/item_tab_header.xml
+++ b/app/src/main/res/layout/item_tab_header.xml
@@ -3,6 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="currentTabPosition"
+            type="int" />
+        <variable
+            name="viewModel"
+            type="com.etsisi.appquitectura.presentation.ui.main.game.viewmodel.PlayViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -15,6 +24,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:isVisible="@{viewModel.currentTabIndex == currentTabPosition}"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_rawRes="@raw/lottie_circle" />
@@ -28,6 +38,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_20"
             android:textStyle="bold"
+            android:text="@{Integer.toString(currentTabPosition)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
