--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -149,4 +149,5 @@
     <dimen name="text_40">40sp</dimen>
 
     <dimen name="input_text_height">48dp</dimen>
+    <dimen name="dimen_0">0dp</dimen>
 </resources>
