--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -13,23 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/imgProfile"
             android:layout_width="@dimen/dimen_150"
             android:layout_height="@dimen/dimen_0"
-            android:background="@drawable/circular_progress"
+            android:layout_marginTop="@dimen/dimen_15"
+            android:src="@drawable/user"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="@dimen/dimen_15"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/imgProfile"
-                android:src="@drawable/user"
-                />
-        </RelativeLayout>
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <ImageView
             android:layout_width="0dp"
@@ -52,7 +45,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dimen_15"
+            android:layout_marginHorizontal="@dimen/dimen_6"
             android:orientation="vertical"
+            android:divider="@drawable/divider"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgProfile">
 
@@ -74,7 +70,7 @@
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center_vertical"
                     android:text="@{viewModel.currentUser.name}"
                     android:textSize="@dimen/text_20" />
@@ -98,7 +94,7 @@
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center_vertical"
                     android:text="@{viewModel.currentUser.email}"
                     android:textSize="@dimen/text_20" />
@@ -123,8 +119,8 @@
                     android:id="@+id/correctQuestions"
                     style="@style/gameBodyStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:gravity="center_vertical"
                     android:text="@{Integer.toString(viewModel.currentUser.scoreAccum)}"
                     android:textSize="@dimen/text_20" />
