--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/time"
-            android:padding="@dimen/dimen_3"
+            android:layout_marginEnd="@dimen/dimen_3"
             android:textSize="@dimen/text_16"
             app:layout_constraintBottom_toTopOf="@id/progress_bar"
             app:layout_constraintEnd_toEndOf="@id/progress_bar"
