--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -4,6 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.etsisi.appquitectura.presentation.ui.main.game.viewmodel.ResultViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -57,12 +64,12 @@
                 style="@style/gameBodyStyle"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_40"
-                android:textColor="@color/white"
-                android:gravity="center"
                 android:background="@drawable/spin_btn_background"
                 android:backgroundTint="@null"
+                android:gravity="center"
                 android:stateListAnimator="@xml/button_pressed"
-                android:text="@string/rotate_roulette" />
+                android:text="@string/rotate_roulette"
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
@@ -103,6 +110,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
+                    android:text="@{viewModel.correctQuestions}"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
 
@@ -128,6 +136,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
+                    android:text="@{viewModel.timeAverage}"
                     android:textSize="@dimen/text_20" />
             </LinearLayout>
         </LinearLayout>
